--- a/frontend/shconnector/package.json
+++ b/frontend/shconnector/package.json
@@ -16,7 +16,9 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-encrypted-storage": "^4.0.3",
-    "react-redux": "^8.1.2"
+    "react-redux": "^8.1.2",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
