--- a/frontend/shconnector/package.json
+++ b/frontend/shconnector/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.5.0",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-encrypted-storage": "^4.0.3",
-    "react-redux": "^8.1.2",
     "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0"
+    "react-redux": "^8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
