--- a/backend/connector/src/main/resources/application.yml
+++ b/backend/connector/src/main/resources/application.yml
@@ -1,5 +1,3 @@
-
-# sql ??
 spring:
   jpa:
     properties:
@@ -11,7 +9,7 @@ spring:
       ddl-auto: create
     defer-datasource-initialization: true
 
-    open-in-view: false # SSE ?? ? HTTP Connection ???? ? ??
+    open-in-view: false # SSE 연결되는 동안 JPA에서 DB와 지속적으로 연결되지 않도록 설정
 
   h2:
     console:
@@ -23,26 +21,26 @@ spring:
     username: sa
     password:
 
-  # ?? ??? ??
+  # 파일 업로드 설정
   servlet:
     multipart:
-      max-file-size: 10MB           # ??? ?? ???(default:1MB)
-      max-request-size: 10MB        # ??? ?? ???(default:10MB)
-      file-size-threshold: 1MB      # ??? ???? ???? ???(default:0MB)
+      max-file-size: 10MB           # 업로드되는 개별 파일의 최대 크기 (default:1MB)
+      max-request-size: 10MB        # 전체 멀티파트 요청의 최대 크기 (default:10MB)
+      file-size-threshold: 1MB      # 메모리에 보관할 수 있는 최대 크기 (default:0MB)
   output:
     ansi:
-      enabled: DETECT             # ???? ??? ?? ??(default: true)
+      enabled: DETECT             # 로깅 및 콘솔 출력 관련 설정 (default: true)
 
 logging.level:
     org.hibernate:
       sql: debug
-      type.descriptor.sql: trace # sql? ????? ???
+      type.descriptor.sql: trace # sql 보이게 설정
 
 server:
   error:
-    include-exception: false      # Response ? Exception ? ????
-    include-message: always       # Response ? Exception Message ? ???? (never | always | on_param)
-    include-stacktrace: on_param  # Response ? Stack Trace ? ???? (never | always | on_param) on_trace_params ? deprecated
+    include-exception: false      # 응답에 예외 정보를 포함할지 여부
+    include-message: always       # 예외 메시지를 응답에 어떻게 포함할지 (never | always | on_param)
+    include-stacktrace: on_param  # 스택 트레이스 정보를 응답에 어떻게 포함할지 (never | always | on_param)
   forward-headers-strategy: native
 
 jwt:
