--- a/backend/connector/src/main/resources/application.yml
+++ b/backend/connector/src/main/resources/application.yml
@@ -34,7 +34,7 @@ spring:
 logging.level:
     org.hibernate:
       sql: debug
-      type.descriptor.sql: trace # sql 보이게 설정
+#      type.descriptor.sql: trace # sql 파라미터 보이게 설정
 
 server:
   error:
