--- a/backend/connector/build.gradle
+++ b/backend/connector/build.gradle
@@ -44,6 +44,10 @@ dependencies {
 
 	runtimeOnly 'com.h2database:h2'
 
+	// mysql database
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
+	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.1'
+
 	// jwt
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
