Feat: QueryDSL 설정 완료

--- a/backend/connector/build.gradle
+++ b/backend/connector/build.gradle
@@ -63,6 +63,8 @@ dependencies {
 	// QueryDSL
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
 	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
+
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 }
 
 // QueryDSL 설정
